---
config:
  theme: mc
  layout: elk
---
classDiagram
direction TB
    class Review {
	    +place
	    +user
	    +rating
	    +comment
	    +create()
	    +update()
	    +delete()
	    +list_reviews()
    }
    class Amenity {
	    +name
	    +description
	    +create()
	    +update()
	    +delete()
	    +list_amenities()
    }
    class User {
	    +first_name
	    +last_name
	    +email
	    +password
	    +is_admin
	    +register()
	    +update()
	    +delete()
    }
    class BaseModel {
	    +id
	    +created_by
	    +updated_by
	    +created_at
	    +update_at
    }
    class Place {
	    +title
	    +description
	    +price
	    +latitude
	    +longitude
	    +owner
	    +amenities
	    +create()
	    +update()
	    +delete()
	    +list_places()
    }
    Review --|> BaseModel : Inheritance
    User --|> BaseModel : Inheritance
    Place --|> BaseModel : Inheritance
    Amenity --|> BaseModel : Inheritance
    Amenity "n" --|> "n" Place : Association
    User "0" --* "n" Place
    User "0" --* "n" Review
    Place "0" --* "n" Review

